fix: ugly scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -105,4 +105,31 @@
             padding: 20px 20px 10px 20px;
         }
     }
+
+    body::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    body::-webkit-scrollbar-track {
+        background: #f5f5f4;
+        /* pageBg */
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background: #cccccc;
+        /* themeNavy */
+        border-radius: 999px;
+        border: 2px solid #f5f5f4;
+    }
+
+    body::-webkit-scrollbar-thumb:hover {
+        background: #1a1f35;
+        /* elevatedNavyBlue */
+    }
+
+    body::-webkit-scrollbar-button {
+        display: none;
+        width: 0;
+        height: 0;
+    }
 }
